# mini-agent-runtime

./: .env.example  .gitignore  README.md  design_answers.md  main.py  pyproject.toml
.trae/documents/: llm-api-layer-plan.md
agent/: __init__.py  config.py  context.py  decision.py  errors.py  llm_client.py  logger.py  memory.py  prompts.py  runtime.py  session.py  session_manager.py
docs/: agent_notes.md  development_guide.md  requirements_analysis.md
tests/: test_calculator.py  test_config.py  test_context.py  test_decision_parser.py  test_llm_client.py  test_logger.py  test_memory.py  test_read_docs.py  test_runtime.py  test_search.py  test_session.py  test_session_manager.py  test_todo.py  test_tool_registry.py
tools/: __init__.py  base.py  calculator.py  mock_search.py  read_docs.py  registry.py  todo.py
web/: app.py
